--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-    <h1>Guess THe Number</h1>
-    <section id="sec">
-        <h2 id="HI" class="a"><p class="p1"> High Score :</p>
+    
+    <section  id="sec">
+        <h1>Guess THe Number</h1>
+        <div  class="Backg">
+        <h2  class="a"><p class="p1" id="HI"> High Score :</p>
         <p id="CR" class="p2"> Current Score :</p></h2>
 <div > 🤔 <div>
 <h2 class="color" id="Guess">Guess ?</h2>
@@ -21,9 +23,9 @@
 <input id="one" type="text">
 <div > <button id="ch" class="btn">Check</button></div>
 <div ><button id="re" class="btn">Reset</button></div>
-
+</div>
     </section>
 
     <script src="main.js"></script>
 </body>
-</html>
+</html> 
